<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_retirar"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_retirar" />
        <item
            android:id="@+id/nav_ingresar"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_ingresar" />
        <item
            android:id="@+id/nav_tranferir"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_transferir" />
        <item
            android:id="@+id/nav_pagar"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_pagar" />
    </group>

    <item android:title="Check">
        <menu>
            <item
                android:id="@+id/nav_cuenta"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_cuenta" />
            <item
                android:id="@+id/nav_historial"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_historial" />
        </menu>
    </item>

</menu>
